--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -5,7 +5,6 @@
     width: 100%;
     min-height:100vh;
    
-
     @media(max-width: 768px){
         font-size: $font-size-base;
     }
@@ -16,12 +15,12 @@
     gap: 100px;
     width: 80%;
     margin-top: 50px;
-   
-
+  
     @media(max-width: 768px){
         flex-direction: column;
         width: 90%;
         gap: 30px;
+        margin-top: 120px;
     }
 
 }
