--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -9,7 +9,7 @@
   font-weight: 600;
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.2s ease;
-  text-align: center;
+  // text-align: center;
    font-family: $font-primary;
 
   &:hover {
