--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -20,7 +20,7 @@
         flex-direction: column;
         width: 90%;
         gap: 30px;
-        margin-top: 120px;
+        // margin-top: 120px;
     }
 
 }
@@ -31,7 +31,6 @@
     width: 50%;
      @media(max-width: 768px){
         width: 100%;
-        margin-top: 10px;
     }
 }
 
