--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -25,7 +25,81 @@
         justify-content: center;
         gap: $space-xl;
     }
+
+    @media (max-width: 768px) {
+      display: none;
+    }
 }
 
 
+/* SIDEBAR */
 
+.sidebar{
+
+    display: none;
+    
+    @media (max-width: 768px) {
+
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+    width: 50%;
+    background-color: $warm-grey;
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
+    color: $dark-moss-green;
+    text-decoration: underline;
+    font-weight: bold;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    
+    }
+
+    &-container{
+    
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 50px;
+        margin-top: 50px;
+        
+    }
+
+    &-links{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 100%;
+        gap: 10px;
+    }
+
+    &-icon{
+        width: 100%;
+        position: absolute;
+        bottom: 350px;
+        background-color: $white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+    }
+    
+}
+
+.open-button{
+    position: fixed;
+    top: 15px;
+    left: 15px;
+    color: $pakistan-green;
+}
+
+.close-button{
+    position: absolute;
+    top: 5px;
+    right: 0; 
+    color:$pakistan-green;       
+}
+/* ------------------------ */
