--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -9,10 +9,8 @@
     font-family: $font-primary;
     font-size: $font-size-lg;
     line-height: 1.25;
-    
-    // background-color: $cream;
-    // background-color: $cornsilk;
-    background-color: $warm-grey;
+    // background-color: $white;
+    background-color: $canvas-beige;
     // color: $brown;
   
     html,
