--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -3,8 +3,7 @@
     align-items: center;
     justify-content: space-between;
     font-size: $font-size-base;
-    // background-color: $white;
-    background-color: $warm-grey;
+    background-color: $white;
     padding: $space-sm $space-lg;
     width: 100%;
     max-width: 100vw;    
@@ -45,9 +44,9 @@
     flex-direction: column;
     height: 100vh;
     width: 50%;
-    background-color: $warm-grey;
+    background-color: $canvas-beige;
     box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
-    color: $dark-moss-green;
+    color: $sage-green;
     text-decoration: underline;
     font-weight: bold;
     position: fixed;
@@ -80,11 +79,9 @@
         width: 100%;
         position: absolute;
         bottom: 350px;
-        background-color: $white;
         display: flex;
         align-items: center;
         justify-content: center;
-
     }
     
 }
@@ -93,13 +90,13 @@
     position: fixed;
     top: 15px;
     left: 15px;
-    color: $pakistan-green;
+    color: $sage-green;
 }
 
 .close-button{
     position: absolute;
     top: 5px;
     right: 0; 
-    color:$pakistan-green;       
+    color:$sage-green;       
 }
 /* ------------------------ */
