--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -34,11 +34,11 @@
     }
 }
 
-.form > input, textarea {
+.form > input {
     background-color: transparent;
     border-bottom: 1px solid $earth-brown;
     margin-bottom: 20px;
-    resize: none;
+   
 
     &:focus{
         background-color: transparent;
@@ -47,11 +47,58 @@
     }
 }
 
+.form > textarea{
+    background-color: transparent;
+    border-bottom: 1px solid $earth-brown;
+    margin-bottom: 20px;
+    resize: none;
+
+    &:focus{
+       background-color: transparent;
+       outline: none;
+    }
+}
+
+.react-datepicker {
+  font-size: 14px;
+  line-height: normal;
+  z-index: 1000;
+}
+
+.react-datepicker__month-container {
+  font-family: inherit;
+}
+
 .form > label{
     color:$earth-brown;
     font-weight: bold;
     margin-bottom: 10px;
 }
+
+.message-label{
+  position: relative;
+}
+
+.star{
+  margin-left: 5px;
+    color: $rust-orange;
+    cursor: pointer;
+    position: relative;
+}
+
+.star:hover::after {
+    content: "Bu alan isteğe bağlıdır.";
+    position: absolute;
+    top: 0;
+    left: 20px;
+    background-color: #333;
+    color: #fff;
+    padding: 6px 10px;
+    border-radius: 4px;
+    font-size: 12px;
+    white-space: nowrap;
+    z-index: 10;
+  }
 
 
 .select-input{
