--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -270,7 +270,20 @@ h3{
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
 
+.faqs-answer {
+  padding: 0.5rem 1rem;
+  color: #555;
+  font-size: 0.9rem;
+}
+
+.icon {
+  transition: transform 0.3s ease;
+}
+
+.icon.rotate {
+  transform: rotate(180deg);
 }
 
 /* -------------------------- */
