--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -3,7 +3,8 @@
     align-items: center;
     justify-content: space-between;
     font-size: $font-size-base;
-    background-color: $white;
+    // background-color: $white;
+    background-color: transparent;
     padding: $space-sm $space-lg;
     width: 100%;
     max-width: 100vw;    
@@ -24,6 +25,7 @@
         justify-content: center;
         gap: $space-xl;
     }
+
 
     @media (max-width: 768px) {
       display: none;
@@ -91,6 +93,10 @@
     top: 15px;
     left: 15px;
     color: $sage-green;
+    display: none;
+    @media (max-width: 768px) {
+        display: flex;
+    }
 }
 
 .close-button{
