--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -3,8 +3,7 @@
     align-items: center;
     justify-content: space-between;
     font-size: $font-size-base;
-    // background-color: $white;
-    background-color: transparent;
+    background-color: $white;
     padding: $space-sm $space-lg;
     width: 100%;
     max-width: 100vw;    
