--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -10,6 +10,7 @@
     position: fixed;
     top: 0;
     z-index: 1;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     
     &-left{
         display: flex;
