--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -3,6 +3,7 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     box-sizing: border-box;
+    cursor: default;
 }
   
   body {
@@ -10,7 +11,7 @@
     font-size: $font-size-lg;
     line-height: 1.25;
     // background-color: $white;
-    background-color: $canvas-beige;
+    background-color: $background;
     // color: $brown;
   
     html,
