--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -135,11 +135,6 @@ h3{
         box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15);
         }
 
-         @media(max-width: 768px){
-            width:100%;
-            height:100%;
-        }
-
     & > img{
         width: 50%;
         border-radius: 100%;
@@ -240,12 +235,13 @@ h3{
     @media(max-width: 768px){
        width: 100%;
        flex-direction: column;
+       margin-bottom: 2rem;
        
     }
 
     &-left{
         width: 50%;
-       
+        
         @media(max-width: 768px){
         width: 100%;
     }
@@ -323,8 +319,8 @@ h3{
     
     @media(max-width: 768px){
        h3{
-        width: 70%;
-        margin-top: 20px;
+        width: 100%;
+        margin-top: 1rem;
        }
     }
     
@@ -412,16 +408,12 @@ h3{
 
     @media(max-width: 768px){
         width: 100%;
-        height: 100px;
     }
 
     & .text{
         position: absolute;
         bottom: 10px;
 
-    @media(max-width: 768px){
-        font-size: 10px;
-    }
     }
 }
 
