--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -408,12 +408,12 @@ h3{
 
     @media(max-width: 768px){
         width: 100%;
+        padding: 1rem;
     }
 
     & .text{
         position: absolute;
         bottom: 10px;
-
     }
 }
 
