--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -236,6 +236,7 @@ h3{
        width: 100%;
        flex-direction: column;
        margin-bottom: 2rem;
+       gap: 0;
        
     }
 
@@ -259,7 +260,7 @@ h3{
 
         @media(max-width: 768px){
             width: 100%;
-    }
+        }
 
         &-body{
             display: flex;
@@ -269,6 +270,19 @@ h3{
             border-radius: 10px;
             height: 100%;
             color: $text-color;
+
+            @media(max-width: 768px){
+            padding: 10px;
+
+        }
+
+        & > h3 {
+         @media(max-width: 768px){
+             font-size: $font-size-base;
+
+        }   
+            
+        }
             & div{
                 display:flex;
                 flex-direction: column;
@@ -407,8 +421,7 @@ h3{
     font-size: $font-size-base;
 
     @media(max-width: 768px){
-        width: 100%;
-        padding: 1rem;
+        font-size: $font-size-sm;
     }
 
     & .text{
