--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -130,10 +130,10 @@ h3{
     text-align: center;
     margin-top: 2rem;
         
-        &:hover{
+    &:hover{
         transform: translateY(-5px);
         box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15);
-        }
+    }
 
     & > img{
         width: 50%;
@@ -236,7 +236,7 @@ h3{
        width: 100%;
        flex-direction: column;
        margin-bottom: 2rem;
-       gap: 0;
+       gap: 30px;
        
     }
 
@@ -260,6 +260,11 @@ h3{
 
         @media(max-width: 768px){
             width: 100%;
+            gap: 20px;
+
+            h3{
+                font-size: 1.4rem;
+            }
         }
 
         &-body{
@@ -271,18 +276,6 @@ h3{
             height: 100%;
             color: $text-color;
 
-            @media(max-width: 768px){
-            padding: 10px;
-
-        }
-
-        & > h3 {
-         @media(max-width: 768px){
-             font-size: $font-size-base;
-
-        }   
-            
-        }
             & div{
                 display:flex;
                 flex-direction: column;
@@ -312,14 +305,16 @@ h3{
                 }
             }
 
-            & button{
+             & button{
                 width: 100%;
                 margin-top: 10px;
             }
         }
-
+            
     }
+
 }
+
 
 /* -------------------------- */
 
@@ -420,13 +415,14 @@ h3{
     color: $white;
     font-size: $font-size-base;
 
-    @media(max-width: 768px){
-        font-size: $font-size-sm;
+    & > p{
+        position: absolute;
+        bottom: 15px;
     }
 
-    & .text{
-        position: absolute;
-        bottom: 10px;
+    @media(max-width: 768px){
+        font-size: $font-size-sm;
+        padding: auto $space-md;
     }
 }
 
