--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -421,7 +421,7 @@ h3{
     }
 
     @media(max-width: 768px){
-        font-size: $font-size-sm;
+        font-size: .5rem;
         padding: auto $space-md;
     }
 }
