--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -261,6 +261,7 @@ h3{
         @media(max-width: 768px){
             width: 100%;
             gap: 20px;
+            margin: 0;
 
             h3{
                 font-size: 1.4rem;
@@ -275,6 +276,13 @@ h3{
             border-radius: 10px;
             height: 100%;
             color: $text-color;
+
+            @media(max-width: 768px){
+            width: 100%;
+            
+
+        }
+
 
             & div{
                 display:flex;
@@ -420,10 +428,6 @@ h3{
         bottom: 15px;
     }
 
-    @media(max-width: 768px){
-        font-size: .5rem;
-        padding: auto $space-md;
-    }
 }
 
 /* -------------------------- */
