--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -237,6 +237,7 @@ h3{
        flex-direction: column;
        margin-bottom: 2rem;
        gap: 30px;
+       padding: 10px;
        
     }
 
@@ -261,7 +262,6 @@ h3{
         @media(max-width: 768px){
             width: 100%;
             gap: 20px;
-            margin: 0;
 
             h3{
                 font-size: 1.4rem;
@@ -276,6 +276,7 @@ h3{
             border-radius: 10px;
             height: 100%;
             color: $text-color;
+           
 
             @media(max-width: 768px){
             width: 100%;
@@ -422,6 +423,10 @@ h3{
     background-color: $text-color;
     color: $white;
     font-size: $font-size-base;
+
+    @media (max-width: 768px){
+       font-size: 1.2rem;
+    }
 
     & > p{
         position: absolute;
