--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -19,8 +19,6 @@ h3{
         text-align: center;
     }
 
-
-
 }
 
 /* HOME */
@@ -29,16 +27,10 @@ h3{
     background-color: $white;
     margin: 0;
     position: relative;
+    z-index: -1;
     background-image: url('../assets/images/ChatGPT\ Image\ 12\ Haz\ 2025\ 03_28_35.png');
     background-repeat: no-repeat;
     background-size: cover;
-
-    @media(max-width: 768px){
-        background-image: url('../assets/images/ChatGPT\ Image\ 12\ Haz\ 2025\ 03_28_35\ \(1\).png');
-        background-repeat: no-repeat;
-        background-size: cover;
-
-    }
 
     &-text{
         font-family: $font-heading-one;
@@ -345,8 +337,7 @@ h3{
        h3{
         width: 100%;
         margin-top: 1rem;
-        font-size:$font-size-lg;
-       }
+        }
     }
     
 }
@@ -434,6 +425,10 @@ h3{
     & > p{
         position: absolute;
         bottom: 15px;
+    }
+
+      @media(max-width: 768px){
+        font-size: .7rem;
     }
 
 }
