--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -15,12 +15,14 @@
     gap: 100px;
     width: 80%;
     margin-top: 50px;
+   
   
     @media(max-width: 768px){
         flex-direction: column;
         width: 90%;
         gap: 30px;
         // margin-top: 120px;
+        margin-bottom: 3rem;
     }
 
 }
