--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -80,8 +80,9 @@
 
 .open-button{
     position: fixed;
-    top: 0px;
-    left: 15px;
+    top: 15px;
+    left: 10px;
+    // color: $text-color;
     color: $text-color;
     display: none;
     @media (max-width: 768px) {
