--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -28,7 +28,7 @@ h3{
     margin: 0;
     position: relative;
     z-index: -1;
-    background-image: url('../assets/images/ChatGPT\ Image\ 12\ Haz\ 2025\ 03_28_35.png');
+    background-image: url('../assets/images/528.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 
@@ -58,6 +58,7 @@ h3{
     width: 100%;
     box-sizing: border-box;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-evenly;
     margin-top: 1rem;
@@ -86,8 +87,8 @@ h3{
         padding: 1.5rem;
         border-radius: 1rem;
         box-shadow: rgba(100, 100, 111, 0.2) 5px 3px 5px 3px;
-        width: 350px;
-        height: 210px;
+        width: 400px;
+        height: 250px;
         margin: 1rem auto;
         text-align: center;
         transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -112,7 +113,12 @@ h3{
 
 /* EXPERTS */
 
-.experts-card{
+.experts{
+    display: flex;
+    flex-direction: row;
+    gap: 3rem;
+
+    &-card{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -155,6 +161,9 @@ h3{
     }
         
     }
+
+
+}
 
 
 
@@ -417,10 +426,23 @@ h3{
     position: relative;
     display: flex;
     justify-content: center;
-    height: 70px;
+    height: 200px;
     background-color: $text-color;
     color: $white;
     font-size: $font-size-base;
+
+    &-contact{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 5rem;
+        & > span {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 1rem;
+        }
+    }
 
     & > p{
         position: absolute;
