--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -67,7 +67,7 @@ h3{
         flex-wrap: wrap;
     }
 
-     @media(max-width: 1350px){
+    @media(max-width: 1350px){
         flex-wrap: wrap;
     }
 
@@ -117,6 +117,10 @@ h3{
     display: flex;
     flex-direction: row;
     gap: 3rem;
+    @media(max-width: 768px){
+        flex-direction: column;
+        margin-bottom: 50px;
+    }
 
     &-card{
     display: flex;
@@ -133,6 +137,8 @@ h3{
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     text-align: center;
     margin-top: 2rem;
+    
+    
         
     &:hover{
         transform: translateY(-5px);
@@ -436,6 +442,12 @@ h3{
         align-items: center;
         justify-content: center;
         gap: 5rem;
+
+        @media(max-width: 768px){
+        flex-direction: column;
+        gap: 1rem;
+    }
+
         
 
         & > span {
@@ -451,7 +463,7 @@ h3{
         bottom: 15px;
     }
 
-      @media(max-width: 768px){
+    @media(max-width: 768px){
         font-size: .7rem;
         text-align: center;
     }
@@ -465,19 +477,29 @@ h3{
 .expert-container{
     display: flex;
     gap: 2rem;
+    @media(max-width: 768px){
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 20px 50px;
+    }
 
     &-image{
         width: 30%;
+        @media(max-width: 768px){
+        width: 250px;
+        height: 300px;
+    }
     }
 
     &-text{
        width: 60%;
+       @media(max-width: 768px){
+        width: 100%;
+    }
     }
 
 }
-
-
-
 
 /* -------------------------- */
 
